Feat/66 upgrade to rosetta spec
* feat: update openApiJson to new coinbase's release

* feat: refactor /account/balance to support new rosetta schema. Also tests were fixed

* feat: added coin_id as txHash:txOutIndex and some more tests

* feat: fix construction service compilation error
